adding code for python loop practice

--- a/PythonLoopsPractice.ipynb
+++ b/PythonLoopsPractice.ipynb
@@ -2,11 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bd37789d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = ['one', 'two', 'three']\n",
+    "for i in temp:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b0ecce7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tempDict = dict()\n",
+    "tempDict['one']=1\n",
+    "tempDict['two']=2\n",
+    "tempDict['three']=3"
+   ]
   }
  ],
  "metadata": {
